added show pass

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<<<<<<< HEAD
     <header>
         <div class="header-container">
             <!-- Logo -->
@@ -32,7 +31,6 @@
             </div>
         </div>
     </header>
-=======
     <main>
         <form id="login-form">
             <label for="username">Username:</label>
@@ -41,10 +39,14 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password">
             
+            <!-- Show Password Checkbox -->
+            <label for="show-password">
+                <input type="checkbox" id="show-password"> Show Password
+            </label>
+            
             <button type="submit">Login</button>
-        </form>
+        </form>
     </main>
->>>>>>> origin/lomesh-html
     <script src="script.js"></script>
 </body>
 </html>
